--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2012 The MoKee Project
+<!--
+     Copyright (C) 2012 The MoKee Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -12,104 +13,135 @@
      WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
      See the License for the specific language governing permissions and
      limitations under the License.
- -->
+-->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mokee.notepad" >
 
-    <application android:icon="@drawable/app_notes"
+    <uses-sdk
+        android:minSdkVersion="15"
+        android:targetSdkVersion="16" />
+
+    <application
+        android:allowBackup="true"
+        android:icon="@drawable/app_notes"
         android:label="@string/app_name"
-        android:allowBackup="true">
-        <provider android:name="com.mokee.notepad.NotePadProvider"
+        android:theme="@android:style/Theme.Holo.Light" >
+        <provider
+            android:name="com.mokee.notepad.NotePadProvider"
             android:authorities="com.mokee.notepad.provider.NotePad" />
 
-        <activity android:name="NotesList"
+        <activity
+            android:name="NotesList"
+            android:configChanges="orientation"
             android:label="@string/title_notes_list"
-            android:theme="@style/title"
-            android:configChanges="orientation">
-
+            android:launchMode="singleTask"
+            android:theme="@style/title" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
                 <action android:name="android.intent.action.EDIT" />
                 <action android:name="android.intent.action.PICK" />
+
                 <category android:name="android.intent.category.DEFAULT" />
+
                 <data android:mimeType="vnd.android.cursor.dir/vnd.google.note" />
             </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.GET_CONTENT" />
+
                 <category android:name="android.intent.category.DEFAULT" />
+
                 <data android:mimeType="vnd.android.cursor.item/vnd.google.note" />
             </intent-filter>
             <intent-filter>
-                <action android:name="android.intent.action.CREATE_SHORTCUT"/>
-                <category android:name="android.intent.category.DEFAULT"/>
+                <action android:name="android.intent.action.CREATE_SHORTCUT" />
+
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="NoteEditor"
+            android:configChanges="keyboardHidden|orientation"
+            android:theme="@style/editor_title" >
 
-        <activity android:name="NoteEditor"
-            android:theme="@style/editor_title"
-            android:configChanges="keyboardHidden|orientation">
-            <!-- This filter says that we can view or edit the data of
-                 a single note -->
-            <intent-filter android:label="@string/resolve_edit">
+            <!--
+                 This filter says that we can view or edit the data of
+                 a single note
+            -->
+            <intent-filter android:label="@string/resolve_edit" >
                 <action android:name="android.intent.action.VIEW" />
                 <action android:name="android.intent.action.EDIT" />
                 <action android:name="com.android.notes.action.EDIT_NOTE" />
+
                 <category android:name="android.intent.category.DEFAULT" />
+
                 <data android:mimeType="vnd.android.cursor.item/vnd.google.note" />
             </intent-filter>
 
-            <!-- This filter says that we can create a new note inside
-                 of a directory of notes. -->
+            <!--
+                 This filter says that we can create a new note inside
+                 of a directory of notes.
+            -->
             <intent-filter>
                 <action android:name="android.intent.action.INSERT" />
+
                 <category android:name="android.intent.category.DEFAULT" />
+
                 <data android:mimeType="vnd.android.cursor.dir/vnd.google.note" />
             </intent-filter>
-
         </activity>
-
-        <activity android:name="TitleEditor"
-            android:label="@string/title_edit_title"
-            android:theme="@android:style/Theme.Dialog"
+        <activity
+            android:name="TitleEditor"
             android:icon="@drawable/ic_menu_edit"
-            android:windowSoftInputMode="stateVisible">
-            <!-- This activity implements an alternative action that can be
+            android:label="@string/title_edit_title"
+            android:theme="@android:style/Theme.Holo.Dialog"
+            android:windowSoftInputMode="stateVisible" >
+
+            <!--
+                 This activity implements an alternative action that can be
                  performed on notes: editing their title.  It can be used as
                  a default operation if the user invokes this action, and is
-                 available as an alternative action for any note data. -->
-            <intent-filter android:label="@string/resolve_title">
-                <!-- This is the action we perform.  It is a custom action we
+                 available as an alternative action for any note data.
+            -->
+            <intent-filter android:label="@string/resolve_title" >
+
+                <!--
+                     This is the action we perform.  It is a custom action we
                      define for our application, not a generic VIEW or EDIT
-                     action since we are not a general note viewer/editor. -->
+                     action since we are not a general note viewer/editor.
+                -->
                 <action android:name="com.android.notepad.action.EDIT_TITLE" />
                 <!-- DEFAULT: execute if being directly invoked. -->
                 <category android:name="android.intent.category.DEFAULT" />
-                <!-- ALTERNATIVE: show as an alternative action when the user is
-                     working with this type of data. -->
+                <!--
+                     ALTERNATIVE: show as an alternative action when the user is
+                     working with this type of data.
+                -->
                 <category android:name="android.intent.category.ALTERNATIVE" />
-                <!-- SELECTED_ALTERNATIVE: show as an alternative action the user
-                     can perform when selecting this type of data. -->
+                <!--
+                     SELECTED_ALTERNATIVE: show as an alternative action the user
+                     can perform when selecting this type of data.
+                -->
                 <category android:name="android.intent.category.SELECTED_ALTERNATIVE" />
                 <!-- This is the data type we operate on. -->
                 <data android:mimeType="vnd.android.cursor.item/vnd.google.note" />
             </intent-filter>
         </activity>
-
-        <activity android:name="com.mokee.notepad.NotesLiveFolder" android:label="@string/live_folder_name"
-            android:icon="@drawable/live_folder_notes">
+        <activity
+            android:name="com.mokee.notepad.NotesLiveFolder"
+            android:icon="@drawable/live_folder_notes"
+            android:label="@string/live_folder_name" >
             <intent-filter>
                 <action android:name="android.intent.action.CREATE_LIVE_FOLDER" />
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-
     </application>
 
-    <uses-sdk android:minSdkVersion="10" android:targetSdkVersion="16"/>
 </manifest>
-
